Fix planes leaving behind rendering artifacts The fix for this is a bit hacky but I haven't figured out the root cause of it yet Also... * Tabify the things * Change the background color (again) * Switch from setTimeout + RequestAnimationFrame to setInterval * Comment out some code that we don't need right now

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
-body{
+body
+{
   margin: 0px;
-  overflow:hidden;
+  overflow: hidden;
 }
 
 #overlays
@@ -10,7 +11,6 @@ body{
     right: 0;
     top: 0;
     bottom: 0;
-    background-color: #00000000;
     z-index: 2;
 }
 
